Created container deploy script 2

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,8 +1,9 @@
-name: deploy2-container
+name: deploy3-container
+
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - "packages/container/**"
 
